fix: made border solid so it also appears on safari

--- a/src/theme/default/components/hr.less
+++ b/src/theme/default/components/hr.less
@@ -3,6 +3,7 @@ hr {
   border-left-width: 0px;
   border-right-width: 0px;
   border-bottom-width: 0.5px;
+  border-style: solid;
   border-color: @hr-color;
   margin-bottom: @default-distance;
 }
